--- a/MerlionPortal/MerlionPortal-war/web/oes/editsavedorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/editsavedorder.xhtml
@@ -56,13 +56,13 @@
                     <p:submenu label="Payment" styleClass="display:block">
                         <p:menuitem value="All invoice" url="allinvoice.xhtml" />
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                         </c:if>
 
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="#" />
+                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
@@ -182,7 +182,7 @@
                 <br></br>
                 <br></br>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton value="Go Back"  action="retrievesavedorder.xhtml" />
+                <p:commandButton value="Go Back"  action="retrievesavedorder.xhtml" icon="ui-icon-circle-arrow-w"/>
                 <p:commandButton value="Submit Order" actionListener="#{editSavedOrder.submitOrder()}" ajax="true"></p:commandButton>
             </h:form>
             <br></br>
