--- a/MerlionPortal/MerlionPortal-war/web/oes/generatequotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/generatequotation.xhtml
@@ -22,7 +22,7 @@
 
         <ui:define name="left">
 
-            <h:form >
+           <h:form id="formMain">
                 <p:panelMenu>
                     <p:submenu label="Home" styleClass="display:block">
                         <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
@@ -55,13 +55,13 @@
                     <p:submenu label="Payment" styleClass="display:block">
                         <p:menuitem value="All invoice" url="allinvoice.xhtml" />
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                         </c:if>
 
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="#" />
+                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
@@ -132,7 +132,7 @@
                 <p:inputTextarea id="display" rows="10" cols="80" value="#{quotationManagedBean.inputText}" />
                 <br></br>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton action="viewallrequests.xhtml" value="Go Back">
+                <p:commandButton action="viewallrequests.xhtml" value="Go Back" icon="ui-icon-circle-arrow-w">
                 </p:commandButton>   
                 <p:commandButton actionListener="#{quotationManagedBean.generateQuotation}"  update="display" value="Submit Quotation">
                 </p:commandButton>        
