--- a/MerlionPortal/MerlionPortal-war/web/oes/invoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/invoice.xhtml
@@ -55,13 +55,13 @@
                     <p:submenu label="Payment" styleClass="display:block">
                         <p:menuitem value="All invoice" url="allinvoice.xhtml" />
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                         </c:if>
 
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="#" />
+                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
@@ -101,7 +101,7 @@
                     <p:column headerText="Quantity">
                         <h:outputText value="#{lineItem.quantity}" />
                     </p:column>
-                    <p:column headerText="Value">
+                    <p:column headerText="Line Total">
                         <h:outputText value="#{lineItem.quantity*lineItem.price}" />
                     </p:column>
                 </p:dataTable>
@@ -120,7 +120,7 @@
                 <h:outputText id="display" />
                 <br></br>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton value="Go Back" action="orderswaitingforinvoice.xhtml?faces-redirect=true" icon="ui-icon-check" />
+                <p:commandButton value="Go Back" action="orderswaitingforinvoice.xhtml?faces-redirect=true" icon="ui-icon-circle-arrow-w" />
                 <p:commandButton value="Generate Invoice" actionListener="#{generateInvoiceManagedBean.generateInvoice()}" icon="ui-icon-check" />
             </h:form>
 
