--- a/MerlionPortal/MerlionPortal-war/web/oes/orderswaitingforinvoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/orderswaitingforinvoice.xhtml
@@ -54,13 +54,13 @@
                     <p:submenu label="Payment" styleClass="display:block">
                         <p:menuitem value="All invoice" url="allinvoice.xhtml" />
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                         </c:if>
 
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="#" />
+                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
@@ -88,7 +88,7 @@
 
                 <br></br>
                 <br></br>
-                <p:commandButton action="oesindexpage.xhtml" value="Go Back"></p:commandButton>
+                <p:commandButton action="oesindexpage.xhtml" value="Go Back" icon="ui-icon-circle-arrow-w"></p:commandButton>
                 <p:commandButton action="#{invoiceManagedBean.generateInvoice()}" value="Generate Invoice">
                 </p:commandButton> 
             </h:form>
