--- a/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
@@ -22,7 +22,7 @@
 
         <ui:define name="left">
 
-            <h:form id="formMain">
+           <h:form id="formMain">
                 <p:panelMenu>
                     <p:submenu label="Home" styleClass="display:block">
                         <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
@@ -55,13 +55,13 @@
                     <p:submenu label="Payment" styleClass="display:block">
                         <p:menuitem value="All invoice" url="allinvoice.xhtml" />
                         <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                         </c:if>
 
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="#" />
+                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
@@ -119,7 +119,7 @@
                     </p:column>
                 </p:dataTable>
                 <br></br>
-                <p:commandButton value="Go Back" actionListener="makepayment.xhtml?faces-redirect=true" icon="ui-icon-check" />
+                <p:commandButton value="Go Back" actionListener="makepayment.xhtml?faces-redirect=true" icon="ui-icon-circle-arrow-w" />
             </h:form>
         </ui:define>
     </ui:composition>
