--- a/MerlionPortal/MerlionPortal-war/web/crms/uploadsignedcontract.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/uploadsignedcontract.xhtml
@@ -40,6 +40,10 @@
                         <p:menuitem value="View All Contracts" url="viewallcontracts.xhtml" />
                         <p:menuitem value="Renew Contracts" url="renewservicecontract.xhtml" />
                     </p:submenu>
+                    <p:submenu label="Service PO" styleClass="display:block">
+                        <p:menuitem value="Create Service PO" url="createservicepo.xhtml" />
+                        <p:menuitem value="View All Service PO" url="viewservicepo.xhtml" />
+                    </p:submenu>
                 </p:panelMenu>
             </h:form>
         </ui:define>
