Messaging Functions as follows:
Write mail
List Inbox mail
Read mail
Delete mail
Reply mail


===

Todo: Broadcast mail

--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -18,6 +18,7 @@
 
         <!-- Override Content -->
         <ui:define name="content">
+            <ui:include src="/templates/messaging/inbox.xhtml" />
             <c:set var="root" value="${request.contextPath}" />
             <div class="dashboard-content">
                 <div class="row">
