--- a/MerlionPortal/MerlionPortal-war/web/admin/viewsystemlog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewsystemlog.xhtml
@@ -64,6 +64,7 @@
 
                     </p:dataTable>
                 </h:form>
+            </div>
         </ui:define>
     </ui:composition>
 </html>
