--- a/MerlionPortal/MerlionPortal-war/web/crms/viewallrequests.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewallrequests.xhtml
@@ -43,7 +43,7 @@
                     </p:submenu>
                     <p:submenu label="Service PO" styleClass="display:block">
                         <p:menuitem value="Create Service PO" url="createservicepo.xhtml" />
-                        <p:menuitem value="View All Service PO" url="viewservicepo.xhtml" />
+                        <p:menuitem value="View All Service PO" url="viewallservicepos.xhtml" />
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
@@ -133,7 +133,7 @@
                             </f:facet>
                             <h:outputText value="#{viewAllRequestsManagedBean.getStatusNumber(requestReceived.status)}" />
                         </p:column>
-                       
+
                     </p:dataTable>
                     <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 
@@ -186,11 +186,13 @@
                                     <h:outputText value="#{viewAllRequestsManagedBean.requestToView.startDate}" />
                                     <h:outputText value="End Date"/>
                                     <h:outputText value="#{viewAllRequestsManagedBean.requestToView.endDate}" />
-                                    <h:outputText value="Origin"/>
-                                    <h:outputText value="#{viewAllRequestsManagedBean.requestToView.origin}" />
-                                    <h:outputText value="Destination"/>
-                                    <h:outputText value="#{viewAllRequestsManagedBean.requestToView.destination}" />
-                                    <h:outputText value="Expected Quantity Per Month (TEU)"/>
+                                    <c:if test="#{viewAllRequestsManagedBean.requestToView.serviceType eq 'Transportation'}" >
+                                        <h:outputText value="Origin"/>
+                                        <h:outputText value="#{viewAllRequestsManagedBean.requestToView.origin}" />
+                                        <h:outputText value="Destination"/>
+                                        <h:outputText value="#{viewAllRequestsManagedBean.requestToView.destination}" />
+                                    </c:if>
+                                    <h:outputText value="Total Expected Quantity (TEU)"/>
                                     <h:outputText value="#{viewAllRequestsManagedBean.requestToView.quantityPerMonth}" />
                                 </p:panelGrid>
                             </div>
