--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
@@ -43,7 +43,7 @@
                     </p:submenu>
                     <p:submenu label="Service PO" styleClass="display:block">
                         <p:menuitem value="Create Service PO" url="createservicepo.xhtml" />
-                        <p:menuitem value="View All Service PO" url="viewservicepo.xhtml" />
+                        <p:menuitem value="View All Service PO" url="viewallservicepos.xhtml" />
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
