Added new pages -- Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/viewallquotations.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewallquotations.xhtml
@@ -31,21 +31,21 @@
                         <p:menuitem value="Create New Service" url="createservice.xhtml" />
                         <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
                     </p:submenu>
-                    <p:submenu label="Quotation" styleClass="display:block">
+                    <p:submenu label="Quotation Management" styleClass="display:block">
                         <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
                         <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
                     </p:submenu>
-                    <p:submenu label="Contract" styleClass="display:block">
+                    <p:submenu label="Contract Management" styleClass="display:block">
                         <p:menuitem value="Create Service Contract" url="createservicecontract.xhtml" />
                         <p:menuitem value="View All Contracts" url="viewallcontracts.xhtml" />
                         <p:menuitem value="Renew Contracts" url="renewservicecontract.xhtml" />
                     </p:submenu>
-                    <p:submenu label="Service PO" styleClass="display:block">
+                    <p:submenu label="Order Management" styleClass="display:block">
                         <p:menuitem value="Create Service PO" url="createservicepo.xhtml" />
-                        <p:menuitem value="View All Service PO" url="viewallservicepos.xhtml" />
+                        <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
+                        <p:menuitem value="View All Invoices" url="viewallinvoices.xhtml" />
                     </p:submenu>
                 </p:panelMenu>
-
             </h:form>
         </ui:define>
 
